[package]
name = "fancy-garbling"
readme = "README.md"
description = "A library for boolean and arithmetic garbling"
categories = ["cryptography"]
keywords = ["cryptography", "garbled-circuit", "GC"]
autobenches = false

[lib]
doctest = false

[features]
nightly = ["scuttlebutt/nightly"]
serde = ["dep:serde", "dep:serde_json", "scuttlebutt/serde"]

[dependencies]
fancy-garbling-base-conversion = { path = "fancy-garbling_new/base_conversion" }
scuttlebutt = { git = "https://github.com/FatemehJD/scuttlebutt", branch = "main" }
ocelot = { git = "https://github.com/FatemehJD/ocelot", branch = "main" }
vectoreyes = { git = "https://github.com/FatemehJD/vectoreyes", branch = "main" }
itertools = "0.10.5"
rand = "0.8.5"
regex = "1.7.0"
subtle = "2.4.1"
serde = { version = "1.0.148", features = ["derive"], optional = true }
serde_json = { version = "1.0.89", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[[bin]]
name = "gen-deltas"
required-features = ["serde"]

[[bench]]
name = "wire_operations"
harness = false

[[bench]]
name = "garbling"
harness = false

[[bench]]
name = "circuits"
harness = false

[[bench]]
name = "util"
harness = false

[[bench]]
name = "semihonest_2pc"
harness = false
